# AGENTIC-AI-1.0

./: .env.example  .gitignore  .replit  PRD.md  README.md  passenger_wsgi.py  pyproject.toml  replit.md  requirements.txt  shortsdb.sqlite  worker.py
.agents/memory/: MEMORY.md  ai-pool.md
attached_assets/: Pasted-Set-up-the-imported-project-The-user-just-imported-this_1784737238602.txt  Pasted-Set-up-the-imported-project-The-user-just-imported-this_1784740389690.txt  Pasted-Set-up-the-imported-project-The-user-just-imported-this_1784816819789.txt
backend/: main.py
backend/api/: analytics.py  auth.py  bot.py  channels.py  hooks.py  jobs.py  keys.py  reseller.py  spy.py  trends.py
backend/core/: ai_pool.py  config.py  database.py  deps.py  encryption.py  gemini_pool.py  plan_limits.py  security.py
backend/models/: models.py
backend/modules/bot/: telegram_bot.py  whatsapp_bot.py
backend/modules/competitor_spy/: spy.py
backend/modules/hook_library/: library.py
backend/modules/meta/: uploader.py
backend/modules/multi_platform/: exporter.py
backend/modules/reseller/: manager.py
backend/modules/scheduler/: scheduler.py
backend/modules/script_generator/: generator.py
backend/modules/text_to_shorts/: generator.py
backend/modules/tiktok/: uploader.py
backend/modules/trend_scout/: scout.py
backend/modules/video_processor/: processor.py
backend/modules/youtube_uploader/: uploader.py
frontend/: index.html
frontend/css/: app.css
frontend/js/: app.js
