[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "alembic>=1.18.5",
    "apscheduler>=3.11.3",
    "bcrypt>=5.0.0",
    "fastapi>=0.139.2",
    "google-generativeai>=0.8.6",
    "httpx>=0.28.1",
    "moviepy>=2.2.1",
    "pillow>=11.3.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.51.0",
    "yt-dlp>=2026.7.4",
]
