[project]
name = "youtube-shorts-factory"
version = "1.0.0"
description = "YouTube Shorts Factory — AI-powered SaaS platform for automated Shorts production and distribution"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=23.2.1",
    "alembic>=1.13.0",
    "apscheduler>=3.10.0",
    "bcrypt>=4.0.0",
    "fastapi>=0.111.0",
    "google-generativeai>=0.7.0",
    "gtts>=2.5.0",
    "httpx>=0.27.0",
    "moviepy>=1.0.3",
    "pillow>=10.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pymysql>=1.1.0",
    "python-dotenv>=1.0.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.9",
    "requests>=2.31.0",
    "sqlalchemy>=2.0.0",
    "uvicorn[standard]>=0.30.0",
    "yt-dlp>=2024.1.0",
]
